--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,12 @@ before_script:
 build:
     stage: build
     script:
-        - dotnet build CozyBus.sln -c Release
+        - dotnet build CozyBus/CozyBus.sln -c Release
 
 publish:
   stage: publish
   script:
-    - dotnet pack CozyBus.sln -c Release
+    - dotnet pack CozyBus/CozyBus.sln -c Release
     - dotnet nuget source add -name gitlab -source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --username gitlab-ci-token --password $CI_JOB_TOKEN
     - dotnet nuget source add -name github -source "https://nuget.pkg.github.com/a-legotin/CozyBus/index.json" --username $GITHUB_USER --password $COMMON_PASSWORD
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab
