--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ publish:
   stage: publish
   script:
     - dotnet pack CozyBus/CozyBus.sln -c Release
-    - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username alexander --password $COMMON_PASSWORD --store-password-in-clear-text
+    - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
     - dotnet nuget add source "https://nuget.pkg.github.com/a-legotin/CozyBus/index.json" --name github --username $GITHUB_USER --password $COMMON_PASSWORD --store-password-in-clear-text
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab
   only:
