--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,6 @@ publish:
     - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
     - dotnet nuget add source "https://nuget.pkg.github.com/a-legotin/CozyBus/index.json" --name github --username $GITHUB_USER --password $COMMON_PASSWORD --store-password-in-clear-text
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab
+    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source github
   only:
     - main
