--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,13 +18,24 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-        source-url: https://nuget.pkg.github.com/a-legotin/CozyBus/index.json
-      env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}} 
         
     - name: Build
       run: dotnet build CozyBus/CozyBus.sln -c Release
-    - name: Pack
-      run: dotnet pack CozyBus/CozyBus.sln -c Release
-    - name: Push generated package to GitHub registry
-      run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --skip-duplicate --no-symbols true
+      
+  publish:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.x
+          source-url: https://nuget.pkg.github.com/a-legotin/index.json
+        env:
+            NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Pack
+        run: dotnet pack CozyBus/CozyBus.sln -c Release
+      - name: Push generated package to GitHub registry
+        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --skip-duplicate
