--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Pack
         run: dotnet pack CozyBus/CozyBus.sln -c Release
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --skip-duplicate
+        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
