--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,5 +34,7 @@ jobs:
 
       - name: Pack
         run: dotnet pack CozyBus/CozyBus.sln -c Release
+      - name: Add private GitHub registry to NuGet
+        run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }}
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --repository https://github.com/${{ github.repository_owner }}/CozyBus --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
