--- a/CozyBus/CozyBus.Core/CozyBus.Core.csproj
+++ b/CozyBus/CozyBus.Core/CozyBus.Core.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>CozyBus.Core</PackageId>
+        <Version>1.0.0</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
+    
 </Project>
