--- a/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
+++ b/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0-preview.1.21102.12" />
+      <PackageReference Include="System.Text.Json" Version="5.0.1" />
+    </ItemGroup>
+
 </Project>
