--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,5 +36,7 @@ jobs:
         run: dotnet pack CozyBus/CozyBus.sln -c Release
       - name: Add private GitHub registry to NuGet
         run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
-      - name: Push generated package to GitHub registry
-        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+      - name: Push generated CozyBus.Core package to GitHub registry
+        run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }}
+      - name: Push generated CozyBus.InMemory package to GitHub registry
+        run: dotnet nuget push CozyBus/CozyBus.InMemory/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }}
