--- a/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
+++ b/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
@@ -4,11 +4,14 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
-    </ItemGroup>
+    <PropertyGroup>
+        <PackageId>CozyBus.InMemory</PackageId>
+        <Version>1.0.1</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CozyBus.Core" Version="1.0.*" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0-preview.1.21102.12" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0-preview.1.21102.12" />
       <PackageReference Include="System.Text.Json" Version="5.0.1" />
