--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-        
+    - name: Add private GitHub registry to NuGet
+      run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
     - name: Build
       run: dotnet build CozyBus/CozyBus.sln -c Release
       
@@ -32,10 +33,10 @@ jobs:
         with:
           dotnet-version: 5.0.x
 
-      - name: Pack
-        run: dotnet pack CozyBus/CozyBus.sln -c Release
       - name: Add private GitHub registry to NuGet
         run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+      - name: Pack
+        run: dotnet pack CozyBus/CozyBus.sln -c Release
       - name: Push generated CozyBus.Core package to GitHub registry
         run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
       - name: Push generated CozyBus.InMemory package to GitHub registry
