--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Add private GitHub registry to NuGet
       run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
     - name: Build
-      run: dotnet build CozyBus/CozyBus.sln -c Release
+      run: dotnet build CozyBus/CozyBus.sln -c Release --source github
       
   publish:
     runs-on: ubuntu-latest
@@ -35,9 +35,11 @@ jobs:
 
       - name: Add private GitHub registry to NuGet
         run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --name github --username  ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
-      - name: Pack
-        run: dotnet pack CozyBus/CozyBus.sln -c Release
+      - name: Pack CozyBus.Core
+        run: dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release
       - name: Push generated CozyBus.Core package to GitHub registry
         run: dotnet nuget push CozyBus/CozyBus.Core/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
+      - name: Pack All
+        run: dotnet pack CozyBus/CozyBus.sln -c Release --source github
       - name: Push generated CozyBus.InMemory package to GitHub registry
         run: dotnet nuget push CozyBus/CozyBus.InMemory/bin/Release/*.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
