--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,14 @@ before_script:
 build:
     stage: build
     script:
-        - dotnet build CozyBus/CozyBus.sln -c Release --source gitlab
+        - dotnet build CozyBus/CozyBus.sln -c Release
 
 publish:
   stage: publish
   script:
     - dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab --skip-duplicate
-    - dotnet pack CozyBus/CozyBus.sln -c Release --source gitlab
+    - dotnet pack CozyBus/CozyBus.sln -c Release
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/*.nupkg" --source gitlab --skip-duplicate
   only:
     - main
