--- a/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
+++ b/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
@@ -11,7 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CozyBus.Core" Version="1.0.*" />
+      <PackageReference Include="CozyBus.Core" Version="1.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
       <PackageReference Include="System.Text.Json" Version="5.0.1" />
