--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,20 +10,26 @@ before_script:
     - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
 
 build:
-    stage: build
-    script:
-        - dotnet build CozyBus/CozyBus.sln -c Release
+  stage: build
+  script:
+    - dotnet restore CozyBus/CozyBus.sln --locked-mode
+    - dotnet build CozyBus/CozyBus.sln -c Release --no-restore
+
 test:
   stage: test
   script:
-    - dotnet test CozyBus/CozyBus.Tests/CozyBus.Tests.csproj
+    - dotnet restore CozyBus/CozyBus.sln --locked-mode
+    - dotnet build CozyBus/CozyBus.sln -c Release --no-restore
+    - dotnet test CozyBus/CozyBus.Tests/CozyBus.Tests.csproj --no-build
 
 publish:
   stage: publish
   script:
-    - dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release
+    - dotnet restore CozyBus/CozyBus.sln --locked-mode
+    - dotnet build CozyBus/CozyBus.sln -c Release --no-restore
+    - dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release --no-build
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab --skip-duplicate
-    - dotnet pack CozyBus/CozyBus.sln -c Release
+    - dotnet pack CozyBus/CozyBus.sln -c Release --no-build
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/*.nupkg" --source gitlab --skip-duplicate
   only:
     - main
