--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ image: mcr.microsoft.com/dotnet/sdk:5.0
 
 stages:
     - build
-    - publish
     - test
+    - publish
 
 before_script:
     - apt update -y -q
@@ -25,10 +25,12 @@ test:
 publish:
   stage: publish
   script:
-    - dotnet restore CozyBus/CozyBus.sln --locked-mode
-    - dotnet build CozyBus/CozyBus.sln -c Release --no-restore
+    - dotnet restore CozyBus/CozyBus.Core/CozyBus.Core.csproj --locked-mode
+    - dotnet build CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release --no-restore
     - dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release --no-build
     - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab --skip-duplicate
+    - dotnet restore CozyBus/CozyBus.sln --locked-mode
+    - dotnet build CozyBus/CozyBus.sln -c Release --no-restore
     - dotnet pack CozyBus/CozyBus.sln -c Release --no-build
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/*.nupkg" --source gitlab --skip-duplicate
   only:
