--- a/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
+++ b/CozyBus/CozyBus.InMemory/CozyBus.InMemory.csproj
@@ -11,7 +11,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CozyBus.Core" Version="1.0.*" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
       <PackageReference Include="System.Text.Json" Version="5.0.1" />
@@ -21,6 +20,10 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>CozyBus.Tests</_Parameter1>
         </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
     </ItemGroup>
 
 </Project>
