--- a/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
+++ b/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
@@ -9,6 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Confluent.Kafka" Version="1.6.2" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
         <PackageReference Include="Polly" Version="7.2.1" />
