--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,5 +45,7 @@ publish:
     - dotnet build CozyBus/CozyBus.sln -c Release --no-restore --no-dependencies
     - dotnet pack CozyBus/CozyBus.sln -c Release --no-build
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/*.nupkg" --source gitlab --skip-duplicate
+    - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/*.nupkg" --source gitlab --skip-duplicate
+    - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/*.nupkg" --source gitlab --skip-duplicate
   only:
     - main
