--- a/CozyBus/CozyBus.AmazonSQS/CozyBus.AmazonSQS.csproj
+++ b/CozyBus/CozyBus.AmazonSQS/CozyBus.AmazonSQS.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>CozyBus.AmazonSQS</PackageId>
+        <Version>1.0.0</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
+
 </Project>
