--- a/CozyBus/CozyBus.AzureServiceBus/CozyBus.AzureServiceBus.csproj
+++ b/CozyBus/CozyBus.AzureServiceBus/CozyBus.AzureServiceBus.csproj
@@ -4,4 +4,11 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>CozyBus.AzureServiceBus</PackageId>
+        <Version>1.0.0</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
+
+
 </Project>
