--- a/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
+++ b/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
@@ -4,6 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>CozyBus.Kafka</PackageId>
+        <Version>1.0.0</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
+
     <ItemGroup>
         <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
     </ItemGroup>
