--- a/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
+++ b/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>CozyBus.RabbitMQ</PackageId>
+        <Version>1.0.0</Version>
+        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+    </PropertyGroup>
+
+
     <ItemGroup>
       <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
     </ItemGroup>
