--- a/CozyBus/CozyBus.AmazonSQS/CozyBus.AmazonSQS.csproj
+++ b/CozyBus/CozyBus.AmazonSQS/CozyBus.AmazonSQS.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup>
         <PackageId>CozyBus.AmazonSQS</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
     </PropertyGroup>
 
