--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ stages:
 before_script:
     - apt update -y -q
     - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
+    - dotnet nuget add source "https://api.nuget.org/v3/index.json" --name nuget
 
 build_core:
   stage: build_core
@@ -54,8 +55,14 @@ publish:
     - dotnet restore CozyBus/CozyBus.sln --locked-mode
     - dotnet build CozyBus/CozyBus.sln -c Release --no-restore --no-dependencies
     - dotnet pack CozyBus/CozyBus.sln -c Release --no-build
+    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/CozyBus.InMemory*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/CozyBus.RabbitMQ*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/CozyBus.Kafka*.nupkg" --source gitlab --skip-duplicate
+    - echo "Pushing to nuget.org"
+    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/CozyBus.InMemory*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/CozyBus.RabbitMQ*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/CozyBus.Kafka*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
   only:
     - main
