--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,9 @@ stages:
     - publish_core
     - build
     - test
-    - publish
+    - publish_remaining
 
 before_script:
-    - apt update -y -q
     - dotnet nuget add source "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
     - dotnet nuget list source
 
@@ -28,7 +27,9 @@ publish_core:
     - dotnet restore CozyBus/CozyBus.Core/CozyBus.Core.csproj --locked-mode
     - dotnet build CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release --no-restore --no-dependencies
     - dotnet pack CozyBus/CozyBus.Core/CozyBus.Core.csproj -c Release --no-build
-    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/*.nupkg" --source gitlab --skip-duplicate
+    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source gitlab --skip-duplicate
+    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source nuget.org --skip-duplicate
+
    
 build:
   stage: build
@@ -47,7 +48,7 @@ test:
     - dotnet build CozyBus/CozyBus.sln -c Release --no-restore --no-dependencies
     - dotnet test CozyBus/CozyBus.Tests/CozyBus.Tests.csproj --no-restore
 
-publish:
+publish_remaining:
   stage: publish
   tags:
     - docker
@@ -55,14 +56,12 @@ publish:
     - dotnet restore CozyBus/CozyBus.sln --locked-mode
     - dotnet build CozyBus/CozyBus.sln -c Release --no-restore --no-dependencies
     - dotnet pack CozyBus/CozyBus.sln -c Release --no-build
-    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/CozyBus.InMemory*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/CozyBus.RabbitMQ*.nupkg" --source gitlab --skip-duplicate
     - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/CozyBus.Kafka*.nupkg" --source gitlab --skip-duplicate
     - echo "Pushing to nuget.org"
-    - dotnet nuget push "CozyBus/CozyBus.Core/bin/Release/CozyBus.Core*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
-    - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/CozyBus.InMemory*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
-    - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/CozyBus.RabbitMQ*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
-    - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/CozyBus.Kafka*.nupkg" --source nuget --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.InMemory/bin/Release/CozyBus.InMemory*.nupkg" --source nuget.org --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.RabbitMQ/bin/Release/CozyBus.RabbitMQ*.nupkg" --source nuget.org --skip-duplicate --api-key $NUGET_API_KEY
+    - dotnet nuget push "CozyBus/CozyBus.Kafka/bin/Release/CozyBus.Kafka*.nupkg" --source nuget.org --skip-duplicate --api-key $NUGET_API_KEY
   only:
     - main
