--- a/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
+++ b/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
@@ -7,7 +7,10 @@
     <PropertyGroup>
         <PackageId>CozyBus.Kafka</PackageId>
         <Version>1.0.2</Version>
+        <Authors>Alexander Legotin</Authors>
+        <Company>EZlab</Company>
         <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
