--- a/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
+++ b/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
@@ -7,13 +7,12 @@
     <PropertyGroup>
         <PackageId>CozyBus.RabbitMQ</PackageId>
         <Version>1.0.5</Version>
+        <Authors>Alexander Legotin</Authors>
+        <Company>EZlab</Company>
         <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
-
-    <ItemGroup>
-      <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
-    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
@@ -21,6 +20,7 @@
         <PackageReference Include="Polly" Version="7.2.4" />
         <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
         <PackageReference Include="System.Text.Json" Version="7.0.3" />
+        <PackageReference Include="CozyBus.Core" Version="1.0.8" />
     </ItemGroup>
 
 </Project>
