--- a/CozyBus/CozyBus.Core/CozyBus.Core.csproj
+++ b/CozyBus/CozyBus.Core/CozyBus.Core.csproj
@@ -1,22 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <PackageId>CozyBus.Core</PackageId>
-        <Version>1.0.9</Version>
-        <Authors>Alexander Legotin</Authors>
-        <Company>EZlab</Company>
-        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-            <_Parameter1>CozyBus.Tests</_Parameter1>
-        </AssemblyAttribute>
-    </ItemGroup>
-    
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup>
+		<PackageId>CozyBus.Core</PackageId>
+		<Version>1.0.9</Version>
+		<Authors>Alexander Legotin</Authors>
+		<Company>EZlab</Company>
+		<RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>CozyBus.Tests</_Parameter1>
+		</AssemblyAttribute>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
