--- a/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
+++ b/CozyBus/CozyBus.Kafka/CozyBus.Kafka.csproj
@@ -1,28 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <PackageId>CozyBus.Kafka</PackageId>
-        <Version>1.0.2</Version>
-        <Authors>Alexander Legotin</Authors>
-        <Company>EZlab</Company>
-        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Confluent.Kafka" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-        <PackageReference Include="Polly" Version="7.2.4" />
-        <PackageReference Include="System.Text.Json" Version="7.0.3" />
-    </ItemGroup>
-
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup>
+		<PackageId>CozyBus.Kafka</PackageId>
+		<Version>1.0.2</Version>
+		<Authors>Alexander Legotin</Authors>
+		<Company>EZlab</Company>
+		<RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CozyBus.Core\CozyBus.Core.csproj" />
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Confluent.Kafka" Version="2.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Polly" Version="7.2.4" />
+		<PackageReference Include="System.Text.Json" Version="7.0.3" />
+	</ItemGroup>
 </Project>
