--- a/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
+++ b/CozyBus/CozyBus.RabbitMQ/CozyBus.RabbitMQ.csproj
@@ -1,26 +1,31 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <PackageId>CozyBus.RabbitMQ</PackageId>
-        <Version>1.0.5</Version>
-        <Authors>Alexander Legotin</Authors>
-        <Company>EZlab</Company>
-        <RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-    </PropertyGroup>
-
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-        <PackageReference Include="Polly" Version="7.2.4" />
-        <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
-        <PackageReference Include="System.Text.Json" Version="7.0.3" />
-        <PackageReference Include="CozyBus.Core" Version="1.0.8" />
-    </ItemGroup>
-
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+	</PropertyGroup>
+	<PropertyGroup>
+		<PackageId>CozyBus.RabbitMQ</PackageId>
+		<Version>1.0.5</Version>
+		<Authors>Alexander Legotin</Authors>
+		<Company>EZlab</Company>
+		<RepositoryUrl>https://github.com/a-legotin/CozyBus</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+		<PackageReference Include="Polly" Version="7.2.4" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+		<PackageReference Include="System.Text.Json" Version="7.0.3" />
+		<PackageReference Include="CozyBus.Core" Version="1.0.8" />
+	</ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>CozyBus.Tests</_Parameter1>
+		</AssemblyAttribute>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
